# fastclaw

./: Cargo.toml  NOTICE  README.md  README.zh-cn.md
resources/: AGENTS.md  BOOTSTRAP.md  CRON_TASK.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md
src/: lib.rs  main.rs
src/agent/: jsonl_history_manager.rs  llm_agent.rs  mod.rs
src/agent/context/: mod.rs  workspace.rs
src/agent/openai_agent/: mod.rs
src/agent/prompt/: history_compact_prompt.md  identity.rs  mod.rs
src/agent/session_history/: jsonl_history_manager.rs  mod.rs
src/channels/: cli_channel.rs  console_cmd.rs  dingtalk_channel.rs  mod.rs  session_id.rs
src/channels/dingtalk_channel/: callback_handler.rs  config.rs  handle_input_message.rs  mod.rs  recv_agent_message.rs
src/channels/wechat_channel/: handle_input_message.rs  mod.rs  recv_agent_message.rs
src/cli/: mod.rs  onboard.rs  start.rs
src/config/: config_.rs  logger.rs  mod.rs  workspace.rs
src/config/type/: mod.rs
src/heartbeat/: mod.rs  spawn_cron_tasks.rs
src/memory/: embedding.rs  mod.rs
src/model_provider/: mod.rs  openai_compatible.rs
src/service_provider/: embedding.rs  image_enhancer.rs  image_gen.rs  imagegen.rs  mod.rs  storage.rs  websearch.rs
src/service_provider/volcengine/: embedding.rs  image_enhancer.rs  image_gen.rs  imagegen.rs  mod.rs  request_sign.rs  storage.rs  websearch.rs
src/tools/: history_backup_tool.rs  imagegen_tool.rs  memory_recall.rs  mod.rs  reload_self_tool.rs  session_history_tool.rs  shell_tool.rs  task_callback_tool.rs  task_tool.rs  time_tool.rs  websearch_tool.rs
src/tools/cloud_storage_tool/: del.rs  load.rs  mod.rs  store.rs
src/tools/image_tool/: image_enhancer.rs  image_understanding.rs  imagegen_tool.rs  mod.rs
src/tools/media/: image.rs
src/tools/task_tool/: create.rs  datetime.rs  del.rs  detail.rs  list.rs  mod.rs  task_api.rs  task_create.rs  task_list.rs  task_schedule.rs  update.rs
src/tools/web_search_tool/: mod.rs
src/type_/: image.rs  media.rs  mod.rs  prompt.rs  text.rs
