[package]
name = "fastclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
directories = { version = "6.0" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "1.0.7" }
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1" }
url = { version = "2.5" }
uuid = { version = "1.22", features = ["v4"] }
base64 = { version = "0.22" }
itertools = { version = "0.14" }
derive_more = { version = "2.1", features = ["full"] }
strum = { version = "0.28", features = ["derive"] }
chrono = { version = "0.4" }
rig-core = { version = "0.33" }
async-trait = { version = "0.1" }
rustyline = { version = "17.0", optional = true }
dingtalk-stream-sdk = { git = "ssh://git@code.mhlife.vip/mhlife/dingtalk-stream-sdk-rust.git", branch = "main", features = ["image"], optional = true }
image = { version = "0.25" }
[features]
model_provider_openai_compatible = []
channel_cli_channel = ["rustyline"]
channel_dingtalk_channel = ["dingtalk-stream-sdk"]

default = [
    "model_provider_openai_compatible",
    "channel_cli_channel",
    "channel_dingtalk_channel",
]



