[package]
name = "fastclaw"
version = "0.2.3"
edition = "2024"

[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
directories = { version = "6.0" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "1.0.7" }
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1" }
url = { version = "2.5" }
reqwest = { version = "0.13", features = ["rustls", "json"], default-features = false }
uuid = { version = "1.22", features = ["v4"] }
base64 = { version = "0.22" }
itertools = { version = "0.14" }
derive_more = { version = "2.1", features = ["full"] }
strum = { version = "0.28", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dateparser = { version = "0.3" }
rig-core = { version = "0.35" }
async-trait = { version = "0.1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
cron = { version = "0.16" }
mime = { version = "0.3" }
futures-core = { version = "0.3" }
ve-tos-rust-sdk = { version = "2.9.16", optional = true }
md5 = { version = "0.8" }
rustyline = { version = "18.0", optional = true }
dingtalk-stream-sdk = { version = "0.2", features = ["image"], optional = true }
wechat-sdk-rs = { version = "0.1.5", optional = true }

image = { version = "0.25" }
[features]
model_provider_openai_compatible = []
channel_cli_channel = ["rustyline"]
channel_dingtalk_channel = ["dingtalk-stream-sdk"]
channel_wechat_channel = ["wechat-sdk-rs"]
cloud_storage_tool = []
volcengine = ["ve-tos-rust-sdk"]

default = [
    "model_provider_openai_compatible",
    "channel_cli_channel",
    "channel_dingtalk_channel",
    "channel_wechat_channel",
    "volcengine",
]



